--- a/python/testimages.ipynb
+++ b/python/testimages.ipynb
@@ -2,10 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "1e726f10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells requires jupyter and notebook package.\n",
+      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U'\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "from PIL import Image, ImageDraw\n",
     "\n",
@@ -95,28 +109,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "id": "6a55ce94",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "450\n",
-      "450\n",
-      "4032\n",
-      "3024\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Creating shape image and converting it to bayer CFA\n",
-    "CreateShapeImage(\"../assets/Shapes/shapes.ppm\")\n",
+    "CreateShapeImage(\"../asset/Shapes/shapes.ppm\")\n",
     "Convert2Bayer(\"../assets/Shapes/shapes.ppm\",\"../assets/Shapes/RAWshapes.ppm\")\n",
     "\n",
     "#Converting beatiful landscape to Bayer CFA\n",
-    "Convert2Bayer(\"../assets/Landscape/Monschau.jpg\",\"../assets/Landscape/RAWMonschau.jpg\")"
+    "Convert2Bayer(\"../assets/Landscape/Monschau.jpg\",\"../assets/Landscape/RAWMonschau.ppm\")"
    ]
   },
   {
