--- a/python/testimages.ipynb
+++ b/python/testimages.ipynb
@@ -2,24 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1e726f10",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells requires jupyter and notebook package.\n",
-      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
-      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
-      "\u001b[1;31mor\n",
-      "\u001b[1;31mconda install jupyter notebook -U'\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from PIL import Image, ImageDraw\n",
     "\n",
@@ -109,13 +95,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "6a55ce94",
    "metadata": {},
    "outputs": [],
    "source": [
     "#Creating shape image and converting it to bayer CFA\n",
-    "CreateShapeImage(\"../asset/Shapes/shapes.ppm\")\n",
+    "CreateShapeImage(\"../assets/Shapes/shapes.ppm\")\n",
     "Convert2Bayer(\"../assets/Shapes/shapes.ppm\",\"../assets/Shapes/RAWshapes.ppm\")\n",
     "\n",
     "#Converting beatiful landscape to Bayer CFA\n",
@@ -124,11 +110,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bb09bd3d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '~/Desktop/RAWMonschau.png'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m ppm_image \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39mopen(\u001b[39m\"\u001b[39m\u001b[39m../assets/Landscape/RAWMonschau.ppm\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[39m# Convert the PPM image to JPEG format and save it\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m ppm_image\u001b[39m.\u001b[39;49msave(\u001b[39m\"\u001b[39;49m\u001b[39m~/Desktop/RAWMonschau.png\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mPNG\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "File \u001b[0;32m/usr/lib/python3/dist-packages/PIL/Image.py:2099\u001b[0m, in \u001b[0;36mImage.save\u001b[0;34m(self, fp, format, **params)\u001b[0m\n\u001b[1;32m   2097\u001b[0m         fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39mopen(filename, \u001b[39m\"\u001b[39m\u001b[39mr+b\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   2098\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 2099\u001b[0m         fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39;49mopen(filename, \u001b[39m\"\u001b[39;49m\u001b[39mw+b\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m   2101\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   2102\u001b[0m     save_handler(\u001b[39mself\u001b[39m, fp, filename)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '~/Desktop/RAWMonschau.png'"
+     ]
+    }
+   ],
+   "source": [
+    "#converting files\n",
+    "\n",
+    "# Open the PPM file\n",
+    "ppm_image = Image.open(\"source_file\")\n",
+    "\n",
+    "# Convert the PPM image to JPEG format and save it\n",
+    "ppm_image.save(\"output_file_name.png\", \"PNG\")"
+   ]
   }
  ],
  "metadata": {
