--- a/python/testimages.ipynb
+++ b/python/testimages.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "1e726f10",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
     "def CreateShapeImage(OutputFileName):\n",
     "    img = Image.new(\"RGB\", (450, 450), (0, 0, 0))\n",
     "    draw = ImageDraw.Draw(img)\n",
-    "    width = 2\n",
+    "    width = 2     # line width\n",
     "\n",
     "    # squares\n",
     "    draw.rectangle([(50,50),(100,100)],outline=(255, 255, 255),width=width)\n",
@@ -95,46 +95,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6a55ce94",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Creating shape image and converting it to bayer CFA\n",
-    "CreateShapeImage(\"../assets/Shapes/shapes.ppm\")\n",
-    "Convert2Bayer(\"../assets/Shapes/shapes.ppm\",\"../assets/Shapes/RAWshapes.ppm\")\n",
-    "\n",
-    "#Converting beatiful landscape to Bayer CFA\n",
-    "Convert2Bayer(\"../assets/Landscape/Monschau.jpg\",\"../assets/Landscape/RAWMonschau.ppm\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "bb09bd3d",
    "metadata": {},
    "outputs": [
     {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: '~/Desktop/RAWMonschau.png'",
+     "ename": "ValueError",
+     "evalue": "unknown file extension: .svg",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m ppm_image \u001b[39m=\u001b[39m Image\u001b[39m.\u001b[39mopen(\u001b[39m\"\u001b[39m\u001b[39m../assets/Landscape/RAWMonschau.ppm\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[39m# Convert the PPM image to JPEG format and save it\u001b[39;00m\n\u001b[0;32m----> 7\u001b[0m ppm_image\u001b[39m.\u001b[39;49msave(\u001b[39m\"\u001b[39;49m\u001b[39m~/Desktop/RAWMonschau.png\u001b[39;49m\u001b[39m\"\u001b[39;49m, \u001b[39m\"\u001b[39;49m\u001b[39mPNG\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
-      "File \u001b[0;32m/usr/lib/python3/dist-packages/PIL/Image.py:2099\u001b[0m, in \u001b[0;36mImage.save\u001b[0;34m(self, fp, format, **params)\u001b[0m\n\u001b[1;32m   2097\u001b[0m         fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39mopen(filename, \u001b[39m\"\u001b[39m\u001b[39mr+b\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m   2098\u001b[0m     \u001b[39melse\u001b[39;00m:\n\u001b[0;32m-> 2099\u001b[0m         fp \u001b[39m=\u001b[39m builtins\u001b[39m.\u001b[39;49mopen(filename, \u001b[39m\"\u001b[39;49m\u001b[39mw+b\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m   2101\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m   2102\u001b[0m     save_handler(\u001b[39mself\u001b[39m, fp, filename)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '~/Desktop/RAWMonschau.png'"
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m/usr/lib/python3/dist-packages/PIL/Image.py:2082\u001b[0m, in \u001b[0;36mImage.save\u001b[0;34m(self, fp, format, **params)\u001b[0m\n\u001b[1;32m   2081\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 2082\u001b[0m     \u001b[39mformat\u001b[39m \u001b[39m=\u001b[39m EXTENSION[ext]\n\u001b[1;32m   2083\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n",
+      "\u001b[0;31mKeyError\u001b[0m: '.svg'",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m Convert2Bayer(\u001b[39m\"\u001b[39m\u001b[39m../assets/Shapes/shapes.ppm\u001b[39m\u001b[39m\"\u001b[39m,\u001b[39m\"\u001b[39m\u001b[39m../assets/Shapes/RAWshapes.ppm\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m      5\u001b[0m \u001b[39m#Converting landscape image to Bayer pattern\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m Convert2Bayer(\u001b[39m\"\u001b[39;49m\u001b[39m../assets/Landscape/Monschau.jpg\u001b[39;49m\u001b[39m\"\u001b[39;49m,\u001b[39m\"\u001b[39;49m\u001b[39m../assets/Landscape/RAWMonschau.svg\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n",
+      "Cell \u001b[0;32mIn[1], line 84\u001b[0m, in \u001b[0;36mConvert2Bayer\u001b[0;34m(inputFileName, OutputFileName)\u001b[0m\n\u001b[1;32m     81\u001b[0m         r22,g22,b22 \u001b[39m=\u001b[39m img\u001b[39m.\u001b[39mgetpixel((x\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m,y\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m)) \n\u001b[1;32m     82\u001b[0m         img\u001b[39m.\u001b[39mputpixel((x\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m,y\u001b[39m+\u001b[39m\u001b[39m1\u001b[39m),(\u001b[39m0\u001b[39m,g22,\u001b[39m0\u001b[39m))\n\u001b[0;32m---> 84\u001b[0m img\u001b[39m.\u001b[39;49msave(OutputFileName)\n",
+      "File \u001b[0;32m/usr/lib/python3/dist-packages/PIL/Image.py:2084\u001b[0m, in \u001b[0;36mImage.save\u001b[0;34m(self, fp, format, **params)\u001b[0m\n\u001b[1;32m   2082\u001b[0m         \u001b[39mformat\u001b[39m \u001b[39m=\u001b[39m EXTENSION[ext]\n\u001b[1;32m   2083\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[0;32m-> 2084\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39munknown file extension: \u001b[39m\u001b[39m{}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m.\u001b[39mformat(ext))\n\u001b[1;32m   2086\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mformat\u001b[39m\u001b[39m.\u001b[39mupper() \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m SAVE:\n\u001b[1;32m   2087\u001b[0m     init()\n",
+      "\u001b[0;31mValueError\u001b[0m: unknown file extension: .svg"
      ]
     }
    ],
    "source": [
-    "#converting files\n",
+    "#Creating shape image and converting it to bayer pattern\n",
+    "CreateShapeImage(\"../assets/Shapes/shapes.ppm\")\n",
+    "Convert2Bayer(\"../assets/Shapes/shapes.ppm\",\"../assets/Shapes/RAWshapes.ppm\")\n",
     "\n",
-    "# Open the PPM file\n",
-    "ppm_image = Image.open(\"source_file\")\n",
-    "\n",
-    "# Convert the PPM image to JPEG format and save it\n",
-    "ppm_image.save(\"output_file_name.png\", \"PNG\")"
+    "#Converting landscape image to Bayer pattern\n",
+    "Convert2Bayer(\"../assets/Landscape/Monschau.jpg\",\"../assets/Landscape/RAWMonschau.ppm\")\n"
    ]
   }
  ],
